avoid width issues with too long names in hall of fame

--- a/src/components/simonly-hall-of-fame/SimonlyHallOfFame.css
+++ b/src/components/simonly-hall-of-fame/SimonlyHallOfFame.css
@@ -21,6 +21,10 @@ table td {
   text-shadow: 0.2vw 0.2vw #6c100f;
   font-size: 4vh;
   letter-spacing: 0.5vw;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 55vw;
 }
 
 table td.score {
